<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailShoes"
    android:background="@drawable/background_about">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oleo_script"
            android:gravity="center"
            android:text="@string/Appname"
            android:layout_marginEnd="48dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="14dp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/shoesimage"
        android:layout_width="360dp"
        android:layout_height="227dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/shoesimage"
        android:src="@drawable/nike_shoes"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail" />

    <TextView
        android:id="@+id/shoesDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        app:layout_constraintVertical_weight="4"
        android:text="@string/textdetailShoes"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/sizeShoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandShoes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_buy"
        android:text="@string/buy_now"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceShoes" />

    <TextView
        android:id="@+id/brandShoes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintVertical_weight="1"
        android:gravity="center"
        android:text="@string/BrandShoes"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/shoesDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoesimage" />

    <TextView
        android:id="@+id/sizeShoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/sizeshoes"
        app:layout_constraintBottom_toTopOf="@+id/priceShoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoesDetail" />

    <TextView
        android:id="@+id/priceShoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/priceshoes"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeShoes" />


</androidx.constraintlayout.widget.ConstraintLayout>